progrVersion changed to "0.5-Pre1"
All events does not do the graph directly, they create an object, put a flag, and the GTK thread does it
new file:prepareEventGraphObjects.c
Also it doesn't end the event directly, uses another flag
This will help with thread problems when graph hasn't finished (normally related to Pango)

timerCount is shown on the eventExecute on runs simple and synced at end with chronopic data in progressbarEventOrTimeExecution
-runInterval is synced, but id doesn't work. See updateTimeProgressBar()
-also pulse (does not work)

eventWindow "auto" also for MIN (not default). Works on all events texts are shown on graph (minY, maxY and guides).

lines end with a circle (deactivable)
jumpReactive, run interval, and pulse has Y beige lines (deactivable)
jumpReactive, runInterval and pulse write at right the values

graph get erased just when start a new event
eventExecute on_update_clicked is called only one time now
eventExecute hide the tables before showing itself

main progressBar deleted, statusBar fills now all space
fixed: pulses buttons where sensitive while any event
eventGraphConfigure moved to new file src/gui/eventGraphConfigure.cs

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -13349,31 +13349,14 @@ If you need more, just repeat the operation later.</property>
 	  </child>
 
 	  <child>
-	    <widget class="GtkProgressBar" id="progressBar">
-	      <property name="width_request">125</property>
-	      <property name="visible">True</property>
-	      <property name="orientation">GTK_PROGRESS_LEFT_TO_RIGHT</property>
-	      <property name="fraction">0</property>
-	      <property name="pulse_step">0.10000000149</property>
-	      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-	    </widget>
-	    <packing>
-	      <property name="padding">0</property>
-	      <property name="expand">False</property>
-	      <property name="fill">False</property>
-	    </packing>
-	  </child>
-
-	  <child>
 	    <widget class="GtkStatusbar" id="appbar2">
-	      <property name="width_request">400</property>
 	      <property name="visible">True</property>
 	      <property name="has_resize_grip">True</property>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
-	      <property name="expand">False</property>
-	      <property name="fill">False</property>
+	      <property name="expand">True</property>
+	      <property name="fill">True</property>
 	    </packing>
 	  </child>
 	</widget>
@@ -17079,7 +17062,7 @@ Event&lt;/b&gt;</property>
 		      <child>
 			<widget class="GtkLabel" id="label271">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Max</property>
+			  <property name="label" translatable="yes">Maximum</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -17107,7 +17090,7 @@ Event&lt;/b&gt;</property>
 		      <child>
 			<widget class="GtkLabel" id="label272">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Min</property>
+			  <property name="label" translatable="yes">Minimum</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -17198,36 +17181,34 @@ Event&lt;/b&gt;</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
+
+		      <child>
+			<widget class="GtkCheckButton" id="checkbutton_min_auto">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">auto</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			  <property name="active">False</property>
+			  <property name="inconsistent">False</property>
+			  <property name="draw_indicator">True</property>
+			  <signal name="clicked" handler="on_checkbutton_min_auto_clicked" last_modification_time="Wed, 11 Oct 2006 11:15:29 GMT"/>
+			</widget>
+			<packing>
+			  <property name="left_attach">1</property>
+			  <property name="right_attach">2</property>
+			  <property name="top_attach">1</property>
+			  <property name="bottom_attach">2</property>
+			  <property name="x_options">fill</property>
+			  <property name="y_options"></property>
+			</packing>
+		      </child>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
 		      <property name="expand">True</property>
 		      <property name="fill">True</property>
-		    </packing>
-		  </child>
-
-		  <child>
-		    <widget class="GtkLabel" id="label275">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">We recommend to leave &lt;i&gt;Min&lt;/i&gt; at 0.</property>
-		      <property name="use_underline">False</property>
-		      <property name="use_markup">True</property>
-		      <property name="justify">GTK_JUSTIFY_LEFT</property>
-		      <property name="wrap">False</property>
-		      <property name="selectable">False</property>
-		      <property name="xalign">0.5</property>
-		      <property name="yalign">0.5</property>
-		      <property name="xpad">0</property>
-		      <property name="ypad">0</property>
-		      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-		      <property name="width_chars">-1</property>
-		      <property name="single_line_mode">False</property>
-		      <property name="angle">0</property>
-		    </widget>
-		    <packing>
-		      <property name="padding">0</property>
-		      <property name="expand">False</property>
-		      <property name="fill">False</property>
 		    </packing>
 		  </child>
 		</widget>
@@ -17419,7 +17400,7 @@ Event&lt;/b&gt;</property>
       </child>
 
       <child>
-	<widget class="GtkFrame" id="frame_runs">
+	<widget class="GtkFrame" id="frame20">
 	  <property name="border_width">8</property>
 	  <property name="visible">True</property>
 	  <property name="label_xalign">0</property>
@@ -17427,7 +17408,7 @@ Event&lt;/b&gt;</property>
 	  <property name="shadow_type">GTK_SHADOW_NONE</property>
 
 	  <child>
-	    <widget class="GtkAlignment" id="alignment62">
+	    <widget class="GtkAlignment" id="alignment63">
 	      <property name="visible">True</property>
 	      <property name="xalign">0.5</property>
 	      <property name="yalign">0.5</property>
@@ -17439,19 +17420,16 @@ Event&lt;/b&gt;</property>
 	      <property name="right_padding">0</property>
 
 	      <child>
-		<widget class="GtkTable" id="table43">
+		<widget class="GtkVBox" id="vbox91">
 		  <property name="visible">True</property>
-		  <property name="n_rows">2</property>
-		  <property name="n_columns">1</property>
 		  <property name="homogeneous">False</property>
-		  <property name="row_spacing">8</property>
-		  <property name="column_spacing">8</property>
+		  <property name="spacing">4</property>
 
 		  <child>
-		    <widget class="GtkRadioButton" id="radiobutton_time">
+		    <widget class="GtkCheckButton" id="checkbutton_paint_circle">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">Show time</property>
+		      <property name="label" translatable="yes">Paint a circle at end</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
@@ -17460,35 +17438,106 @@ Event&lt;/b&gt;</property>
 		      <property name="draw_indicator">True</property>
 		    </widget>
 		    <packing>
-		      <property name="left_attach">0</property>
-		      <property name="right_attach">1</property>
-		      <property name="top_attach">0</property>
-		      <property name="bottom_attach">1</property>
-		      <property name="x_options">fill</property>
-		      <property name="y_options"></property>
+		      <property name="padding">0</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
 		    </packing>
 		  </child>
 
 		  <child>
-		    <widget class="GtkRadioButton" id="radiobutton_speed">
+		    <widget class="GtkCheckButton" id="checkbutton_show_vertical_grid">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">Show speed</property>
+		      <property name="label" translatable="yes">Show grid (on multiple events)</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
 		      <property name="active">False</property>
 		      <property name="inconsistent">False</property>
 		      <property name="draw_indicator">True</property>
-		      <property name="group">radiobutton_time</property>
 		    </widget>
 		    <packing>
-		      <property name="left_attach">0</property>
-		      <property name="right_attach">1</property>
-		      <property name="top_attach">1</property>
-		      <property name="bottom_attach">2</property>
-		      <property name="x_options">fill</property>
-		      <property name="y_options"></property>
+		      <property name="padding">0</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkLabel" id="label320">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Runs</property>
+		      <property name="use_underline">False</property>
+		      <property name="use_markup">False</property>
+		      <property name="justify">GTK_JUSTIFY_LEFT</property>
+		      <property name="wrap">False</property>
+		      <property name="selectable">False</property>
+		      <property name="xalign">0</property>
+		      <property name="yalign">0.5</property>
+		      <property name="xpad">0</property>
+		      <property name="ypad">0</property>
+		      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		      <property name="width_chars">-1</property>
+		      <property name="single_line_mode">False</property>
+		      <property name="angle">0</property>
+		    </widget>
+		    <packing>
+		      <property name="padding">0</property>
+		      <property name="expand">True</property>
+		      <property name="fill">True</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkHBox" id="hbox140">
+		      <property name="visible">True</property>
+		      <property name="homogeneous">False</property>
+		      <property name="spacing">8</property>
+
+		      <child>
+			<widget class="GtkRadioButton" id="radiobutton_time">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">Show time</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			  <property name="active">False</property>
+			  <property name="inconsistent">False</property>
+			  <property name="draw_indicator">True</property>
+			</widget>
+			<packing>
+			  <property name="padding">12</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkRadioButton" id="radiobutton_speed">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">Show speed</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			  <property name="active">False</property>
+			  <property name="inconsistent">False</property>
+			  <property name="draw_indicator">True</property>
+			  <property name="group">radiobutton_time</property>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+		    </widget>
+		    <packing>
+		      <property name="padding">0</property>
+		      <property name="expand">True</property>
+		      <property name="fill">True</property>
+		      <property name="pack_type">GTK_PACK_END</property>
 		    </packing>
 		  </child>
 		</widget>
@@ -17497,9 +17546,9 @@ Event&lt;/b&gt;</property>
 	  </child>
 
 	  <child>
-	    <widget class="GtkLabel" id="label317">
+	    <widget class="GtkLabel" id="label318">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">&lt;b&gt;Runs&lt;/b&gt;</property>
+	      <property name="label" translatable="yes">&lt;b&gt;Other&lt;/b&gt;</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
